--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,20 @@
           <a class="navbar-brand" href="#">Meeting Room Booking System</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
+          <form class="navbar-form navbar-right" role="form" action="/rooms" method="get">
             <div class="form-group">
-              <input type="text" placeholder="Room No" class="form-control">
+              <select name="building" class="form-control">
+              	<option value="A1">A1</option>
+              	<option value="A2">A2</option>
+              	<option value="A6">A6</option>
+              	<option value="A9">A9</option>
+              	<option value="Admin">Admin</option>
+              </select>
             </div>
-            <button type="button" class="btn btn-primary">Find</button>
+            <div class="form-group">
+              <input type="text" placeholder="Room No" class="form-control" name="room">
+            </div>
+            <button type="submit" class="btn btn-primary">Find</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -64,10 +73,7 @@
       </div>
     </div> <!-- /container -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <% include partials/footer.ejs %>
     <script src="javascripts/buildings.js"></script>
 
   </body>
